// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HDModal/> should render component 1`] = `
<div
  id="portal-modal"
>
  <HDModal
    cancelLabel="Cancel"
    className=""
    confirmLabel="Confirm"
    customStyle=""
    headerText=""
    hideCancelButton={false}
    hideClose={false}
    hideConfirmButton={false}
    hideFooter={false}
    onBeforeOpen={[Function]}
    onCancel={[MockFunction]}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
    show={true}
  >
    <div>
      Test
    </div>
  </HDModal>
</div>
`;

exports[`<HDModal/> should render component with header text 1`] = `
<div
  id="portal-modal"
>
  <HDModal
    cancelLabel="Cancel"
    className=""
    confirmLabel="Confirm"
    customStyle=""
    headerText="Heading"
    hideCancelButton={false}
    hideClose={false}
    hideConfirmButton={false}
    hideFooter={false}
    onBeforeOpen={[Function]}
    onCancel={[MockFunction]}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
    show={true}
  >
    <div>
      Test
    </div>
  </HDModal>
</div>
`;

exports[`<HDModal/> should render component with header text and confirm 1`] = `
<div
  id="portal-modal"
>
  <HDModal
    cancelLabel="Cancel"
    className=""
    confirmLabel="Yes"
    customStyle=""
    headerText="Heading"
    hideCancelButton={false}
    hideClose={false}
    hideConfirmButton={false}
    hideFooter={false}
    onBeforeOpen={[Function]}
    onCancel={[MockFunction]}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
    show={true}
  >
    <div>
      Test
    </div>
  </HDModal>
</div>
`;

exports[`<HDModal/> should render component with header text confirm and cancel 1`] = `
<div
  id="portal-modal"
>
  <HDModal
    cancelLabel="Go"
    className=""
    confirmLabel="Yes"
    customStyle=""
    headerText="Heading"
    hideCancelButton={false}
    hideClose={false}
    hideConfirmButton={false}
    hideFooter={false}
    onBeforeOpen={[Function]}
    onCancel={[MockFunction]}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
    show={true}
  >
    <div>
      Test
    </div>
  </HDModal>
</div>
`;
